# SQLTerminal-Win32

./: .gitignore  CMakeLists.txt  HANDOVER.md  PORTING_PLAN.md  README.md  appcast.xml  vcpkg.json
docs/: RELEASING.md
docs/RELEASES/: v0.1.1.md
packaging/: SQLTerminal.rc  app.manifest  appcast.xml  installer.iss
scripts/: build-and-test.cmd  build-installer.cmd  make-appcast.ps1  make_ico.py
src/: WinMain.cpp  resource.h  version.h.in
src/app/: DotCommandHandler.cpp  DotCommandHandler.h  ResultFormat.cpp  ResultFormat.h  TerminalLogic.cpp  TerminalLogic.h
src/core/: PostgresHba.cpp  PostgresHba.h  SqlLiteralScanner.cpp  SqlLiteralScanner.h  SqlStatementClassifier.cpp  SqlStatementClassifier.h  SqlStatementSplitter.cpp  SqlStatementSplitter.h  SqlSyntaxHighlighter.cpp  SqlSyntaxHighlighter.h  SqlText.h
src/db/: DatabaseProvider.h  DatabaseProviderFactory.h  DatabaseSession.cpp  DatabaseSession.h  PostgresConnInfo.h  PostgresProvider.cpp  PostgresProvider.h  SqliteProvider.cpp  SqliteProvider.h
src/editor/: EditorModel.cpp  EditorModel.h
src/models/: ConnectionProfile.h  DatabaseConnection.h  DatabaseEngine.h  QueryHistory.h  QueryResult.h
src/persistence/: Stores.cpp  Stores.h
src/platform/: Encoding.h  Updater.cpp  Updater.h
src/security/: CredentialStore.cpp  CredentialStore.h
src/ui/: CellDetailDialog.cpp  CellDetailDialog.h  ConnectionDialog.cpp  ConnectionDialog.h  D2DSupport.h  HistoryDialog.cpp  HistoryDialog.h  MainWindow.cpp  MainWindow.h  SqlEditorControl.cpp  SqlEditorControl.h  SqlGridControl.cpp  SqlGridControl.h  Theme.h  ThemedDialog.cpp  ThemedDialog.h
tests/: app_tests.cpp  database_session_tests.cpp  editor_core_tests.cpp  postgres_conninfo_tests.cpp  postgres_live_test.cpp  sqlcore_tests.cpp  sqlite_provider_tests.cpp  store_tests.cpp  test_harness.h
